fucking big commit

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
     <title>New project</title>
 </head>
 <body>
-
 <div class="container">
     <div id="app">
+      <div class="fps js-fps"></div>
+      <div class="fps js-dist" style="top:100px"></div>
       <canvas id="babylon"></canvas>
     </div>
 </div>
